--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -478,6 +478,12 @@
           $(this).val('');
         });
       });
+      function logout() {
+      $.ajax({
+          type: "POST",
+          url: "/member/logout"
+        })
+    }
     </script>
 </body>
 
