修改密碼後回首頁

--- a/src/main/resources/public/frontend/change_password.html
+++ b/src/main/resources/public/frontend/change_password.html
@@ -162,6 +162,8 @@
         headers: { "Content-Type": "application/json;charset=utf8" },
       }).done(function (msg) {
         alert(msg);
+      }).done(function(){
+        location.href="../index.html"
       });
     });
   </script>
