--- a/src/main/resources/public/frontend/forgot_password.html
+++ b/src/main/resources/public/frontend/forgot_password.html
@@ -91,7 +91,7 @@
         </div>
         <div class="col-lg-6">
           <div class="fxt-content">
-            <h2>查詢密碼</h2>
+            <h2>忘記密碼</h2>
             <div class="fxt-form">
               <form id="email_submit" action="" method="">
                 <div class="form-group">
