--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -197,7 +197,7 @@
         <footer>
           <ul class="nospace inline pushright">
             <li><a class="btn" href="pages/booking.html">立即訂房</a></li>
-            <li><a class="btn inverse" href="#">加入會員</a></li>
+            <li><a class="btn inverse" href="../public/frontend/register.html">加入會員</a></li>
           </ul>
         </footer>
       </article>
@@ -392,8 +392,43 @@
         <div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.6044320422584!2d120.64881961494096!3d24.15052618439372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d69a2dcccf1%3A0x664964d28300759b!2z6LOH5bGV5ZyL6Zqb6IKh5Lu95pyJ6ZmQ5YWs5Y-4LeS4reWNgOS4reW_gw!5e0!3m2!1szh-TW!2stw!4v1675914393514!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="one_third">
-          <h4>公車資訊</h4>
+        <div class="one_third" style="width:400px; height:300px; display: flex;flex-direction:column;">
+          <div style="display: flex; flex-wrap: nowrap;align-items: flex-start">
+            &emsp;<i class="fas fa-bus fa-2x"></i>&emsp;
+            <p style="font:bold; font-size: 20px;">公車資訊：</p>&ensp;<p style="color:#f3bf07; font-size: 18px;">公益大墩路口</p>
+          </div>
+          <div
+            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 5% 0;">
+            <button>123</button>
+            <p>往大里</p>
+            <button>進站中</button>
+            <p>往霧峰</p>
+            <button>5分鐘</button>
+          </div>
+          <div
+            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;">
+            <button>123</button>
+            <p>往大里</p>
+            <button>進站中</button>
+            <p>往霧峰</p>
+            <button>5分鐘</button>
+          </div>
+          <div
+            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 5% 0;">
+            <button>123</button>
+            <p>往大里</p>
+            <button>進站中</button>
+            <p>往霧峰</p>
+            <button>5分鐘</button>
+          </div>
+          <div
+            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;">
+            <button>123</button>
+            <p>往大里</p>
+            <button>進站中</button>
+            <p>往霧峰</p>
+            <button>5分鐘</button>
+          </div>
         </div>
       </div>
     </footer>
