更新加入會員link

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -197,7 +197,7 @@
         <footer>
           <ul class="nospace inline pushright">
             <li><a class="btn" href="pages/booking.html">立即訂房</a></li>
-            <li><a class="btn inverse" href="../public/frontend/register.html">加入會員</a></li>
+            <li><a class="btn inverse" href="../frontend/register.html">加入會員</a></li>
           </ul>
         </footer>
       </article>
