公車資訊查詢API完成

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -412,37 +412,39 @@
             &emsp;<i class="fas fa-bus fa-2x"></i>&emsp;
             <p style="font:bold; font-size: 20px;">公車資訊：</p>&ensp;<p style="color:#f3bf07; font-size: 18px;">公益大墩路口</p>
           </div>
-          <div
-            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 5% 0;">
-            <button>123</button>
-            <p>往大里</p>
-            <button>進站中</button>
-            <p>往霧峰</p>
-            <button>5分鐘</button>
-          </div>
-          <div
-            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;">
-            <button>123</button>
-            <p>往大里</p>
-            <button>進站中</button>
-            <p>往霧峰</p>
-            <button>5分鐘</button>
-          </div>
-          <div
-            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 5% 0;">
-            <button>123</button>
-            <p>往大里</p>
-            <button>進站中</button>
-            <p>往霧峰</p>
-            <button>5分鐘</button>
-          </div>
-          <div
-            style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;">
-            <button>123</button>
-            <p>往大里</p>
-            <button>進站中</button>
-            <p>往霧峰</p>
-            <button>5分鐘</button>
+          <div id="bus">
+            <div
+              style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
+              <button>27</button>
+              <p>往嶺東</p>
+              <button id="27_0">進站中</button>
+              <p>往台中車站</p>
+              <button id="27_1">5分鐘</button>
+            </div>
+            <div
+              style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
+              <button>72</button>
+              <p>往潭子</p>
+              <button id="72_0">進站中</button>
+              <p>往嶺東</p>
+              <button id="72_1">5分鐘</button>
+            </div>
+            <div
+              style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
+              <button>81</button>
+              <p>往太平</p>
+              <button id="81_0">進站中</button>
+              <p>往朝馬</p>
+              <button id="81_1">5分鐘</button>
+            </div>
+            <div
+              style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
+              <button>107</button>
+              <p>往舊正</p>
+              <button id="107_0">進站中</button>
+              <p>往黎明新村</p>
+              <button id="107_1">5分鐘</button>
+            </div>
           </div>
         </div>
       </div>
