--- a/src/main/resources/public/frontend/register.html
+++ b/src/main/resources/public/frontend/register.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>iRelax Hotel | 註冊</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="login_static/css/bootstrap.min.css" />
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="login_static/css/fontawesome-all.min.css" />
-    <!-- Flaticon CSS -->
-    <link rel="stylesheet" href="login_static/css/flaticon.css" />
-    <!-- Google Web Fonts -->
-    <link href="login_static/css/css.css" rel="stylesheet" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="login_static/css/style.css" />
-  </head>
 
-  <body>
-    <!--[if lt IE 8]>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>iRelax Hotel | 註冊</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="login_static/css/bootstrap.min.css" />
+  <!-- Fontawesome CSS -->
+  <link rel="stylesheet" href="login_static/css/fontawesome-all.min.css" />
+  <!-- Flaticon CSS -->
+  <link rel="stylesheet" href="login_static/css/flaticon.css" />
+  <!-- Google Web Fonts -->
+  <link href="login_static/css/css.css" rel="stylesheet" />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="login_static/css/style.css" />
+</head>
+
+<body>
+  <!--[if lt IE 8]>
       <p class="browserupgrade">
         You are using an
         <strong>outdated</strong>
@@ -28,23 +29,18 @@
         to improve your experience.
       </p>
     <![endif]-->
-    <div id="preloader" class="preloader">
-      <div class="inner">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
+  <div id="preloader" class="preloader">
+    <div class="inner">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
     </div>
-    <section
-      class="fxt-template-animation fxt-template-layout24"
-      data-bg-image="img/figure/bg24-l.jpg"
-    >
-      <!-- Video Area Start Here -->
-      <div class="fxt-video-background">
-        <div class="fxt-video">
-          <div
-            id="fxtVideo"
-            data-property="{
+  </div>
+  <section class="fxt-template-animation fxt-template-layout24" data-bg-image="img/figure/bg24-l.jpg">
+    <!-- Video Area Start Here -->
+    <div class="fxt-video-background">
+      <div class="fxt-video">
+        <div id="fxtVideo" data-property="{
                     videoURL:'vCI2kmFJD_w', 
                     autoPlay:true, 
                     mute:true, 
@@ -55,123 +51,118 @@
                     showControls:false, 
                     optimizeDisplay:true,
                     containment:'.fxt-video-background'
-                }"
-          ></div>
-        </div>
+                }"></div>
       </div>
-      <!-- Video Area Start Here -->
-      <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-3 col-12">
-            <div class="fxt-header">
-              <a href="login.html" class="fxt-logo">
-                <img src="login_static/picture/logo-9.png" alt="Logo" />
-              </a>
-            </div>
+    </div>
+    <!-- Video Area Start Here -->
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-3 col-12">
+          <div class="fxt-header">
+            <a href="../index.html" class="fxt-logo">
+              <img src="login_static/picture/logo-9.png" alt="Logo" />
+            </a>
           </div>
-          <div class="col-lg-6 col-12">
-            <div class="fxt-content">
-              <h2>註冊</h2>
-              <div class="fxt-form">
-                <form method="POST">
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-1">
-                      <input
-                        type="text"
-                        id="name"
-                        class="form-control"
-                        name="name"
-                        placeholder="姓名"
-                        required="required"
-                      />
-                    </div>
+        </div>
+        <div class="col-lg-6 col-12">
+          <div class="fxt-content">
+            <h2>註冊</h2>
+            <div class="fxt-form">
+              <form id="register">
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-1">
+                    <input type="text" id="name" class="form-control" name="name" placeholder="姓名"
+                      required="required" />
                   </div>
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-1">
-                      <input
-                        type="account"
-                        id="account"
-                        class="form-control"
-                        name="account"
-                        placeholder="帳號"
-                        required="required"
-                      />
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-2">
-                      <input
-                        id="password"
-                        type="password"
-                        class="form-control"
-                        name="password"
-                        placeholder="********"
-                        required="required"
-                      />
-                      <i
-                        toggle="#password"
-                        class="fa fa-fw fa-eye toggle-password field-icon"
-                      ></i>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-1">
-                      <input
-                        type="tel"
-                        id="tel"
-                        class="form-control"
-                        name="tel"
-                        placeholder="手機"
-                        required="required"
-                      />
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-1">
-                      <input
-                        type="email"
-                        id="email"
-                        class="form-control"
-                        name="email"
-                        placeholder="信箱"
-                        required="required"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-4">
-                      <button type="submit" class="fxt-btn-fill">註冊</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="fxt-footer">
-                <div class="fxt-transformY-50 fxt-transition-delay-9">
-                  <p>
-                    已經擁有帳號了?
-                    <a href="login.html" class="switcher-text2 inline-text">
-                      登錄
-                    </a>
-                  </p>
                 </div>
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-1">
+                    <input type="account" id="account" class="form-control" name="account" placeholder="帳號"
+                      required="required" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-2">
+                    <input id="password" type="password" class="form-control" name="password" placeholder="********"
+                      required="required" />
+                    <i toggle="#password" class="fa fa-fw fa-eye toggle-password field-icon"></i>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-1">
+                    <input type="tel" id="tel" class="form-control" name="tel" placeholder="手機" required="required" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-1">
+                    <input type="email" id="email" class="form-control" name="email" placeholder="信箱"
+                      required="required" />
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-4">
+                    <button type="submit" class="fxt-btn-fill">註冊</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="fxt-footer">
+              <div class="fxt-transformY-50 fxt-transition-delay-9">
+                <p>
+                  已經擁有帳號了?
+                  <a href="login.html" class="switcher-text2 inline-text">
+                    登錄
+                  </a>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- jquery-->
-    <script src="login_static/js/jquery-3.5.0.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="login_static/js/bootstrap.min.js"></script>
-    <!-- Imagesloaded js -->
-    <script src="login_static/js/imagesloaded.pkgd.min.js"></script>
-    <!-- YouTube js -->
-    <script src="login_static/js/jquery.mb.YTPlayer.min.js"></script>
-    <!-- Validator js -->
-    <script src="login_static/js/validator.min.js"></script>
-    <!-- Custom Js -->
-    <script src="login_static/js/main.js"></script>
-  </body>
+    </div>
+  </section>
+  <!-- jquery-->
+  <script src="login_static/js/jquery-3.5.0.min.js"></script>
+  <!-- Bootstrap js -->
+  <script src="login_static/js/bootstrap.min.js"></script>
+  <!-- Imagesloaded js -->
+  <script src="login_static/js/imagesloaded.pkgd.min.js"></script>
+  <!-- YouTube js -->
+  <script src="login_static/js/jquery.mb.YTPlayer.min.js"></script>
+  <!-- Validator js -->
+  <script src="login_static/js/validator.min.js"></script>
+  <!-- Custom Js -->
+  <script src="login_static/js/main.js"></script>
+  <script>
+    $("#register").submit((e) => {
+      e.preventDefault();
+      console.log("clicked");
+      var url = "/member/";
+      var email = $("#email").val();
+      var name = $("#name").val();
+      var account = $("#account").val();
+      var passwd = $("#password").val();
+      var tel = $("#tel").val();
+      var data = '{"email":"' + email + '","realName":"' + name + '","account":"' + account
+        + '","passwd":"' + passwd + '","tel":"' + tel + '"}';
+      console.log(data);
+      $.ajax({
+        type: "POST",
+        url: url,
+        data: data,
+        headers: { "Content-Type": "application/json;charset=utf8" }
+      }).done(function (msg) {
+        alert(msg);
+      }).done(function (msg) {
+          console.log(msg)
+          if (msg == "註冊成功") {
+            location.href="login.html"
+          } else {
+          }
+        });
+    });
+  </script>
+</body>
+
 </html>
