--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -103,6 +103,9 @@
       vertical-align: middle;
     }
   </style>
+  <!-- 天氣 -->
+  <script src="../layout/scripts/Weather.js"></script>
+
 </head>
 
 <body id="top">
@@ -110,7 +113,11 @@
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
     <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
-      <i class="far fa-snowflake fa-2x"></i>&emsp;
+      <div id="weather_content">
+        <!-- <span style="font-size: 16px;">台中市</span>
+        <span style="font-size: 16px; padding:0 5px;">25.2°C</span>
+        <img src="https://www.cwb.gov.tw/V8/assets/img/weather_icons/weathers/svg_icon/day/01.svg" class="weather_img"/> -->
+      </div>&emsp;
       <i class="fas fa-user-circle fa-2x"></i>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
@@ -550,7 +557,6 @@
         })
       })
     </script>
-
 </body>
 
 </html>
