--- a/src/main/resources/public/frontend/change_password.html
+++ b/src/main/resources/public/frontend/change_password.html
@@ -84,7 +84,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-lg-3 col-12">
           <div class="fxt-header">
-            <a href="login.html" class="fxt-logo">
+            <a href="../index.html" class="fxt-logo">
               <img src="login_static/picture/logo-9.png" alt="Logo" />
             </a>
           </div>
