--- a/src/main/resources/public/frontend/login.html
+++ b/src/main/resources/public/frontend/login.html
@@ -59,7 +59,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-lg-3">
           <div class="fxt-header">
-            <a href="" class="fxt-logo">
+            <a href="../index.html" class="fxt-logo">
               <img src="login_static/picture/logo-9.png" alt="Logo" />
             </a>
           </div>
