--- a/src/main/resources/public/pages/facility.html
+++ b/src/main/resources/public/pages/facility.html
@@ -6,6 +6,9 @@
   <title>iRelax Hotel | 活動設施 | 休閒設施</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
+    integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
+    crossorigin="anonymous"></script>
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <style>
     .fac {
@@ -38,6 +41,8 @@
       position: relative;
     }
   </style>
+  <script src="../assets/js/jquery.js"></script>
+  <script src="../layout/scripts/CheckLogin.js"></script>
 </head>
 
 <body id="top">
@@ -45,21 +50,14 @@
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
     <div
-      style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
-      <i class="far fa-snowflake fa-2x"></i>&emsp;
-      <i class="fas fa-user-circle fa-2x"></i>
+      style="height:78.67px; display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
+      <div id="weather_content">
+      </div>&emsp;
+      <i class="fas fa-user-circle fa-2x"></i>&nbsp;
       <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li><a class="drop">我的帳戶</a>
-            <ul>
-              <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
-              <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
-            </ul>
-        </ul>
-      </nav>
-      </li>
+        <ul id="loginBar" class="clear">
     </div>
-  <!-- ################################################################################################ -->
+    <!-- ################################################################################################ -->
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left">
         <a href="../index.html">
@@ -141,7 +139,7 @@
             </div>
           </div>
         </div><br><br>
-        
+
         <div>
           <div class="fac" style="width: 600px;">
             <img class="fac_img" src="../images/facility/tabletennis.jpg" alt="" style="width: 1200px;">
@@ -184,7 +182,7 @@
             </div>
           </div>
         </div><br><br>
-        
+
       </div>
       <!-- ################################################################################################ -->
       <!-- main body -->
@@ -234,6 +232,8 @@
   <script src="../layout/scripts/jquery.min.js"></script>
   <script src="../layout/scripts/jquery.backtotop.js"></script>
   <script src="../layout/scripts/jquery.mobilemenu.js"></script>
+  <!-- 天氣 -->
+  <script src="../layout/scripts/Weather.js"></script>
 </body>
 
 </html>
