--- a/src/main/resources/public/pages/intro.html
+++ b/src/main/resources/public/pages/intro.html
@@ -5,6 +5,9 @@
   <title>iRelax Hotel | 關於我們 | 簡介</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
+    integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
+    crossorigin="anonymous"></script>
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <!-- 輪播CDN -->
   <style>
@@ -24,6 +27,8 @@
       display: none;
     }
   </style>
+  <script src="../assets/js/jquery.js"></script>
+  <script src="../layout/scripts/CheckLogin.js"></script>
 
 </head>
 
@@ -32,19 +37,12 @@
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
     <div
-      style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
-      <i class="far fa-snowflake fa-2x"></i>&emsp;
-      <i class="fas fa-user-circle fa-2x"></i>
+      style="height:78.67px; display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
+      <div id="weather_content">
+      </div>&emsp;
+      <i class="fas fa-user-circle fa-2x"></i>&nbsp;
       <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li><a class="drop">我的帳戶</a>
-            <ul>
-              <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
-              <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
-            </ul>
-        </ul>
-      </nav>
-      </li>
+        <ul id="loginBar" class="clear">
     </div>
     <!-- ################################################################################################ -->
     <header id="header" class="hoc clear">
@@ -108,8 +106,8 @@
         <div style="padding: 0% 20%;">
           <!-- 輪播 -->
           <!-- <div id="c_img" class="slideshow"> -->
-            <img src="../images/backgrounds/hotel_pic_01.jpg" alt="" />
-            <!-- <img src="../images/backgrounds/02.png" alt="" />
+          <img src="../images/backgrounds/hotel_pic_01.jpg" alt="" />
+          <!-- <img src="../images/backgrounds/02.png" alt="" />
             <img src="../images/backgrounds/03.png" alt="" />
             <img src="../images/backgrounds/04.png" alt="" />
           </div> -->
@@ -174,6 +172,8 @@
   <script src="../layout/scripts/jquery.min.js"></script>
   <script src="../layout/scripts/jquery.backtotop.js"></script>
   <script src="../layout/scripts/jquery.mobilemenu.js"></script>
+  <!-- 天氣 -->
+  <script src="../layout/scripts/Weather.js"></script>
   <!-- 輪播js -->
   <script>
     $('.slideshow').each(function () {
