--- a/src/main/resources/public/pages/room.html
+++ b/src/main/resources/public/pages/room.html
@@ -6,6 +6,9 @@
   <title>iRelax Hotel | 瀏覽房型 ｜ 房型一覽</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
+    integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
+    crossorigin="anonymous"></script>
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -44,52 +47,22 @@
   </style>
 
   <script src="../assets/js/jquery.js"></script>
-  <script>
-    $.ajax({
-      url: '/roomtype/',
-      type: 'GET',
-    })
-      .done(function (room_msg) {
-        console.log(room_msg);
-        room_msg.forEach(function (element, index) {
-          console.log(element.roomPic)
-          $('#room_content').append(
-          `
-          <div class="room" style="width: 600px;">
-            <img src="data:image/jpeg;base64,${element.roomPic}" alt="圖片無法載入" style="width: 1200px;" class="room_img"/>
-          </div>
-          <div class=".flex_cell_inner">
-            <div class="roomText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
-              <h1>${element.roomType}</h1><br>
-              <p>${element.content}</p>
-              <p>價錢：${element.roomPrice}</p>
-              <br>
-            </div>
-          </div>
-          `
-          )
-        })
-      });
-  </script>
+  <script src="../layout/scripts/CheckLogin.js"></script>
 </head>
 
 <body id="top">
+  <!-- ################################################################################################ -->
+  <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
     <div
-      style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
-      <i class="far fa-snowflake fa-2x"></i>&emsp;
-      <i class="fas fa-user-circle fa-2x"></i>
+      style="height:78.67px; display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
+      <div id="weather_content">
+      </div>&emsp;
+      <i class="fas fa-user-circle fa-2x"></i>&nbsp;
       <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li><a class="drop">我的帳戶</a>
-            <ul>
-              <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
-              <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
-            </ul>
-        </ul>
-      </nav>
-      </li>
+        <ul id="loginBar" class="clear">
     </div>
+    <!-- ################################################################################################ -->
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left">
         <a href="../index.html">
@@ -190,6 +163,36 @@
     <script src="../layout/scripts/jquery.min.js"></script>
     <script src="../layout/scripts/jquery.backtotop.js"></script>
     <script src="../layout/scripts/jquery.mobilemenu.js"></script>
+    <!-- 天氣 -->
+    <script src="../layout/scripts/Weather.js"></script>
+
+    <script>
+      $.ajax({
+        url: '/roomtype/',
+        type: 'GET',
+      })
+        .done(function (room_msg) {
+          console.log(room_msg);
+          room_msg.forEach(function (element, index) {
+            console.log(element.roomPic)
+            $('#room_content').append(
+            `
+            <div class="room" style="width: 600px;">
+              <img src="data:image/jpeg;base64,${element.roomPic}" alt="圖片無法載入" style="width: 1200px;" class="room_img"/>
+            </div>
+            <div class=".flex_cell_inner">
+              <div class="roomText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
+                <h1>${element.roomType}</h1><br>
+                <p>${element.content}</p>
+                <p>價錢：${element.roomPrice}</p>
+                <br>
+              </div>
+            </div>
+            `
+            )
+          })
+        });
+    </script>
 </body>
 
 </html>
