--- a/src/main/resources/public/frontend/login.html
+++ b/src/main/resources/public/frontend/login.html
@@ -97,6 +97,7 @@
                 <div class="form-group">
                   <div class="fxt-transformY-50 fxt-transition-delay-4">
                     <button type="submit" class="fxt-btn-fill">Log in</button>
+                    <div id="buttonDiv"></div>
                   </div>
                 </div>
               </form>
@@ -128,6 +129,53 @@
   <script src="login_static/js/validator.min.js"></script>
   <!-- Custom Js -->
   <script src="login_static/js/main.js"></script>
+  <!-- google login js -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+    function handleCredentialResponse(response) {
+      const data = parseJwt(response.credential);
+      console.log("Encoded JWT ID token: " + response.credential);
+      console.log(data.name);
+      var email = data.email;
+      var realName = data.name;
+      var gid = data.sub;
+      var url = "/member/googleLogin";
+      var Jdata = '{"email":"' + email + '","realName":"' + realName + '","googleLoginId":"' + gid + '"}';
+      $.ajax({
+        type: "POST",
+        url: url,
+        data: Jdata,
+        headers: { "Content-Type": "application/json;charset=utf8" },
+      }).done(function (msg) {
+        alert(msg);
+      }).done(function (msg) {
+        if (msg == "登入成功！") {
+          location.href = "../index.html"
+        } else {
+        }
+      });
+    }
+    window.onload = function () {
+      google.accounts.id.initialize({
+        client_id: "299021882230-um6vlan5i728nrji5o0cbffiqgucc99d.apps.googleusercontent.com",
+        callback: handleCredentialResponse
+      });
+      google.accounts.id.renderButton(
+        document.getElementById("buttonDiv"),
+        { theme: "outline", size: "large" }  // customization attributes
+      );
+      google.accounts.id.prompt(); // also display the One Tap dialog
+    }
+    function parseJwt(token) {
+      var base64Url = token.split('.')[1];
+      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      var jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+
+      return JSON.parse(jsonPayload);
+    };
+  </script>
   <script>
 
     let loginForm = document.forms.namedItem('loginForm')
@@ -158,7 +206,7 @@
         .done(function (msg) {
           console.log(msg)
           if (msg == "登入成功！") {
-            location.href="../index.html"
+            location.href = "../index.html"
           } else {
           }
         })
