首頁公車更新＋訂房查詢撈到資料

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -287,6 +287,11 @@
             <p style="font:bold; font-size: 20px;">公車資訊：</p>&ensp;<p style="color:#f3bf07; font-size: 18px;">公益大墩路口</p>
           </div>
           <div id="bus">
+            <div style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-between;align-items: baseline;">
+              <span style="border-bottom-style: dotted">公車車次</span>
+              <span style="border-bottom-style: dotted">到站 / 發車時間</span>
+              <span style="border-bottom-style: dotted">到站 / 發車時間</span>
+            </div>
             <div
               style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
               <button>27</button>
