--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -187,21 +187,21 @@
             <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
               <h6 class="heading">景觀雙人房</h6>
               <img src="images/room/景觀雙人房.jpg" alt="logo" width="202" height="42" title="logo">
-              <footer><a href="#">More Details &raquo;</a></footer>
+              <footer><a href="./pages/room.html">More Details &raquo;</a></footer>
             </article>
           </li>
           <li class="one_third">
             <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
               <h6 class="heading">豪華雙人房</h6>
               <img src="images/room/豪華雙人房.jpg" alt="logo" width="202" height="42" title="logo">
-              <footer><a href="#">More Details &raquo;</a></footer>
+              <footer><a href="./pages/room.html">More Details &raquo;</a></footer>
             </article>
           </li>
           <li class="one_third">
             <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
               <h6 class="heading">尊榮雙人房</h6>
               <img src="images/room/尊榮雙人房.jpg" alt="logo" width="202" height="42" title="logo">
-              <footer><a href="#">More Details &raquo;</a></footer>
+              <footer><a href="./pages/room.html">More Details &raquo;</a></footer>
             </article>
           </li>
         </ul><br><br>
