訂房功能初版完成

--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -386,7 +386,7 @@
             <option value="2">雙人房</option>
             <option value="4">四人房</option>
           </select>
-          <button id="abc" name="search_room" class="btn-29"
+          <button id="search" name="search_room" class="btn-29"
             style="width: 150px;height:40px; background-color: #f3bf07; margin: 0% 5px;">查詢空房</button>
         </form>
         <p align="center" style="color: aliceblue;">13歲以上同成人收費</ㄋ>
@@ -405,177 +405,7 @@
               </td>
             </tr>
             <tr id="search_content" style="display: flex; flex-direction:column">
-              <!-- <td align="center">
-                <table id="DataList1" cellspacing="0" border="0" style="/* border-collapse:collapse; */">
-                  <tbody>
-                    <tr>
-                      <td>
-                        <div id="DataList1_ctl00_panel_DataList1">
-                          <div class="room_type_area">
-                            <table width="870" border="0" cellpadding="0" cellspacing="0">
-                              <tbody>
-                                <tr align="left">
-                                  <td colspan="2" align="left">
-                                    <div class="room_type_title">
-                                      商務客房兩小床含早餐
-                                      <span>
-                                        兩小床
-                                      </span>
-                                    </div>
-                                  </td>
-                                  <td width="174" align="center">
-                                    <input type="submit" name="DataList1$ctl01$btn_order" value="一般訂房"
-                                      id="DataList1_ctl01_btn_order" class="btn">
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td colspan="3" height="2px">
-                                    <table width="880" height="1px" border="0" cellpadding="0" cellspacing="0"
-                                      class="allroomprice_line">
-                                      <tbody>
-                                        <tr>
-                                          <td><br></td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td width="260">
-                                    <div class="allroomprice_img">
-                                      <img id="DataList1_ctl01_img_Room1"
-                                        style="border-color:#E5DED9; border-width:1px; border-style:Solid; height:159px; width:240px;"
-                                        src="../images/room/尊榮雙人房.jpg">
-                                    </div>
-                                  </td>
-                                  <td width="446" align="left" valign="top">
-                                    <div class="allroomprice_room_description">房間簡介</div>
-                                    <div class="allroomprice_room_description_detail">
-                                      <div style="width: 445px; height: 145px; overflow: hidden">
-                                        <div>
-                                          房價包含稅金及服務費，含早餐餐盒。
-                                        </div>
-                                        &nbsp;
-                                        <div>＊ 全新液晶電視。</div>
-                                        <div>＊ 進口羽毛被枕。</div>
-                                        <div>＊ 中央空調系統。</div>
-                                        <br>
-                                      </div>
-                                    </div>
-                                  </td>
-                                  <td class="list_price" align="center" valign="center">
-                                    <table width="140" border="0" cellpadding="0" cellspacing="5">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center">
-                                            <div>
-                                              <font style="font-size: 15px">NT$</font>3500
-                                            </div>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td colspan="3"></td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td> -->
             </tr>
-            <!-- <tr>
-              <td align="center">
-                <table id="DataList1" cellspacing="0" border="0" style="/* border-collapse:collapse; */">
-                  <tbody>
-                    <tr>
-                      <td>
-                        <div id="DataList1_ctl00_panel_DataList1">
-                          <div class="room_type_area">
-                            <table width="870" border="0" cellpadding="0" cellspacing="0">
-                              <tbody>
-                                <tr align="left">
-                                  <td colspan="2" align="left">
-                                    <div class="room_type_title">
-                                      商務客房兩小床含早餐
-                                      <span>
-                                        兩小床
-                                      </span>
-                                    </div>
-                                  </td>
-                                  <td width="174" align="center">
-                                    <input type="submit" name="DataList1$ctl01$btn_order" value="一般訂房"
-                                      id="DataList1_ctl01_btn_order" class="btn">
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td colspan="3" height="2px">
-                                    <table width="880" height="1px" border="0" cellpadding="0" cellspacing="0"
-                                      class="allroomprice_line">
-                                      <tbody>
-                                        <tr>
-                                          <td><br></td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td width="260">
-                                    <div class="allroomprice_img">
-                                      <img id="DataList1_ctl01_img_Room1"
-                                        style="border-color:#E5DED9; border-width:1px; border-style:Solid; height:159px; width:240px;"
-                                        src="../images/room/尊榮雙人房.jpg">
-                                    </div>
-                                  </td>
-                                  <td width="446" align="left" valign="top">
-                                    <div class="allroomprice_room_description">房間簡介</div>
-                                    <div class="allroomprice_room_description_detail">
-                                      <div style="width: 445px; height: 145px; overflow: hidden">
-                                        <div>
-                                          房價包含稅金及服務費，含早餐餐盒。
-                                        </div>
-                                        &nbsp;
-                                        <div>＊ 全新液晶電視。</div>
-                                        <div>＊ 進口羽毛被枕。</div>
-                                        <div>＊ 中央空調系統。</div>
-                                        <br>
-                                      </div>
-                                    </div>
-                                  </td>
-                                  <td class="list_price" align="center" valign="center">
-                                    <table width="140" border="0" cellpadding="0" cellspacing="5">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center">
-                                            <div>
-                                              <font style="font-size: 15px">NT$</font>3500
-                                            </div>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td colspan="3"></td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr> -->
           </tbody>
         </table>
       </div>
@@ -651,8 +481,6 @@
     <script type="text/javascript">
       var startDate;
       var endDate;
-      var floor;
-      var person;
       $(function () {
         $('input[name="datefilter"]').daterangepicker({
           autoUpdateInput: false,
@@ -670,51 +498,21 @@
           }
         });
         $('input[name="datefilter"]').on('apply.daterangepicker', function (ev, picker) {
-
-          // startDate.inputView = startDatePicker
-          // changeStartDate()
-
           $(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
           startDate = picker.startDate.format('YYYY-MM-DD');
           endDate = picker.endDate.format('YYYY-MM-DD');
-          console.log(startDate);
-          console.log(endDate);
         });
         $('input[name="datefilter"]').on('cancel.daterangepicker', function (ev, picker) {
           $(this).val('');
         });
       });
     </script>
-    <!-- <script>
-      $('#date1').datetimepicker({
-        date: null,
-        format: 'YYYY-MM-DD',
-        locale: moment.locale('zh-tw'),
-        daysOfWeekDisabled: [0, 6],
-        minDate: moment().add(1, 'days'),
-        maxDate: moment().add(30, 'days'),
-        disabledDates: [
-          moment().add(1, 'days'),
-          moment().add(2, 'days'),
-          '2021-10-10',
-          '2021-12-25'
-        ],
-        disabledDates(time) {
-          return time.getTime() < Date.now() - 3600 * 1000 * 24;
-        }
-      });
-    </script> -->
     <script>
-
-      $("#abc").click(function () {
+      $("#search").click(function () {
         // e.preventDefault();
+        event.preventDefault();
         var person = $("#person").val();
         var floor = $("#floor").val();
-        console.log(person);
-        console.log(floor);
-        event.preventDefault();
-        console.log(startDate);
-        console.log(endDate);
         $.ajax({
           type: 'GET',
           // url: `/room/emptyRoom?checkinDate=${startDate}&checkoutDate=${endDate}&floor=${floor}&person=${person}`,
@@ -727,10 +525,7 @@
           },
           headers: { "Content-Type": "application/json;charset=utf8" },
         }).done(function (msg) {
-          // console.log(msg);
-          // console.log(msg[2].roomType);
-          // console.log(msg[2].roomType.roomType);
-          // console.log(msg[3].roomType.roomPerson);
+          $('#search_content').empty();
           for (var i = 0; i < msg.length; i++) {
             $('#search_content').append(
               `
@@ -751,7 +546,7 @@
                                       </td>
                                       <td width="174" align="center">
                                         <input type="button" name="DataList1$ctl01$btn_order" value="一般訂房"
-                                          id="DataList1_ctl01_btn_order" class="btn" onclick="showalert()">
+                                          id="${msg[i].id}" class="btn booking">
                                       </td>
                                     </tr>
                                     <tr>
@@ -816,31 +611,21 @@
           }
         })
       });
-      //     success: function (room_msg) {
-      //       // room_msg.forEach(function (item, index) {
-      //       //   // console.log(user_room.value);
-      //       //   if(room_search.value == item.roomType.roomType && floor_search.value == item.roomFloor && people_search.value <= item.roomType.roomPerson){
-      //       //     console.log(item);
-      //       //   }
-      //       // });
-      //       return false;
-      //     }
-      //   })
-      // })
-
-function giveBack() {
-  type:'POST',
-
-}
-
-
-      // function showalert() {
-        // alert("謝謝您訂購iRelax的房間！請問您確定要訂購此房型嗎？");        
-      // }
-      // function bookSuccess() {
-      //   alert("")
-      // }
-
+    </script>
+    <script>
+      $('#search_content').on('click','.booking',function () {
+        console.log(this.id);
+        $.ajax({
+          type: 'POST',
+          url: '/order/',
+          contentType: 'application/json;charset=utf8',
+          data: JSON.stringify({
+            'checkinDate': startDate,
+            'checkoutDate': endDate,
+            'room_id': this.id
+          })
+        })
+      })
     </script>
     <!-- 天氣＋會員登入 -->
     <script src="../layout/scripts/Weather.js"></script>
