--- a/src/main/resources/public/pages/facility.html
+++ b/src/main/resources/public/pages/facility.html
@@ -118,7 +118,7 @@
           </div>
           <div class=".flex_cell_inner">
             <div class="facText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
-              <h1>健身房</h1>
+              <p class="font-family" style="font-size: 25px;">健身房</p>
               <p>開放時間：6:00 a.m. – 10:00 p.m</p>
               <p>配有：跑步機，健身腳踏車，橢圓心肺訓練機，重量訓練椅（臥推椅），自由重量，瑜伽墊，美腿按摩機。</p>
               <br>
