--- a/src/main/resources/public/pages/facility.html
+++ b/src/main/resources/public/pages/facility.html
@@ -132,7 +132,7 @@
           </div>
           <div class=".flex_cell_inner">
             <div class="facText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
-              <h1>游泳池</h1>
+              <p class="font-family" style="font-size: 25px;">游泳池</p>
               <p>開放時間：9:00 a.m. – 10:00 p.m</p>
               <p>熱水池、冷水池、冰水池(男)、冷療室、超氧離子亞加浴(女)、蒸氣室、烤箱</p>
               <br>
@@ -146,7 +146,7 @@
           </div>
           <div class=".flex_cell_inner">
             <div class="facText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
-              <h1>休閒中心</h1>
+              <p class="font-family" style="font-size: 25px;">休閒中心</p>
               <p>開放時間：6:00 a.m. – 10:00 p.m</p>
               <p>休閒中心內含：投籃機、冰球機、手足球機、桌球、撞球、SWITCH遊戲室、PS4遊戲室、兒童遊戲區、書報閱覽區…等遊憩設施。</p>
               <br>
@@ -160,7 +160,7 @@
           </div>
           <div class=".flex_cell_inner">
             <div class="facText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
-              <h1>餐廳</h1>
+              <p class="font-family" style="font-size: 25px;">餐廳</p>
               <p>開放時間：9:00 a.m. – 10:00 p.m</p>
               <p>結合東方創意美食與西方人氣料理，採主菜單點的半自助百匯服務。</p>
               <p>另外備有私人包廂，在明亮清爽的空間裡享受專屬聚會，讓您與好友家人共度幸福時光。</p>
@@ -175,7 +175,7 @@
           </div>
           <div class=".flex_cell_inner">
             <div class="facText" style="margin-top:0px;margin-bottom:0px;border-radius:0px;">
-              <h1>酒吧</h1>
+              <p class="font-family" style="font-size: 25px;">酒吧</p>
               <p>開放時間：6:00 a.m. – 10:00 p.m</p>
               <p>iRelax酒吧的低調空間，適合夜幕低垂時來此放鬆身心，主打多樣化雞尾酒，各國威士忌與日本佳釀，獨飲或小聚都能在此放慢步調、享受寧靜與放鬆。</p>
               <br>
