--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -265,35 +265,35 @@
             </div>
             <div
               style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
-              <button>27</button>
-              <p>往嶺東</p>
-              <button id="27_0">進站中</button>
-              <p>往台中車站</p>
-              <button id="27_1">5分鐘</button>
-            </div>
-            <div
-              style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
-              <button>72</button>
+              <button style="width: 53px; height: 42px;">72</button>
               <p>往潭子</p>
-              <button id="72_0">進站中</button>
+              <button id="72_0" style="width:80px;height: 42px;">進站中</button>
               <p>往嶺東</p>
-              <button id="72_1">5分鐘</button>
+              <button id="72_1" style="width:80px;height: 42px;">5分鐘</button>
             </div>
             <div
               style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
-              <button>81</button>
+              <button style="width: 53px; height: 42px;">81</button>
               <p>往太平</p>
-              <button id="81_0">進站中</button>
+              <button id="81_0" style="width:80px;height: 42px;">進站中</button>
               <p>往朝馬</p>
-              <button id="81_1">5分鐘</button>
+              <button id="81_1" style="width:80px;height: 42px;">5分鐘</button>
             </div>
             <div
               style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
-              <button>107</button>
+              <button style="width: 53px; height: 42px;">27</button>
+              <p>往嶺東</p>
+              <button id="27_0" style="width:80px;height: 42px;">進站中</button>
+              <p>往台中車站</p>
+              <button id="27_1" style="width:80px;height: 42px;">5分鐘</button>
+            </div>
+            <div
+              style="display: flex; flex-wrap: nowrap;align-items: flex-start;justify-content:space-around;align-items: baseline;padding: 2.5% 0;">
+              <button style="width: 53px; height: 42px;">107</button>
               <p>往舊正</p>
-              <button id="107_0">進站中</button>
+              <button id="107_0" style="width:80px;height: 42px;">進站中</button>
               <p>往黎明新村</p>
-              <button id="107_1">5分鐘</button>
+              <button id="107_1" style="width:80px;height: 42px;">5分鐘</button>
             </div>
           </div>
         </div>
