--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -613,7 +613,7 @@
       });
     </script>
     <script>
-      $('#search_content').on('click','.booking',function () {
+      $('#search_content').on('click', '.booking', function () {
         $.ajax({
           type: 'POST',
           url: '/order/',
@@ -623,6 +623,14 @@
             'checkoutDate': endDate,
             'room_id': this.id
           })
+        }).done(function (msg) {
+          alert(msg);
+        }).done(function (msg) {
+          console.log(msg)
+          if (msg == "下訂完成！將跳轉到訂單頁面，請盡快付款，謝謝！") {
+            location.href = "../frontend/myorder.html"
+          } else {
+          }
         })
       })
     </script>
